Fixed issue with navbar and card button mobile May need to add new card type for mobile and fix for leaving nav menu

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -19,3 +19,12 @@ html, body {
     align-items: center;
     min-height: 100vh;
 }
+
+@media only screen and (max-width: 500px) {
+    .loader {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        margin: auto 20px auto auto;
+    }
+}
