--- a/src/app/common/Button/button.css
+++ b/src/app/common/Button/button.css
@@ -33,6 +33,8 @@
   max-width: 250px;
   margin: auto auto 10px auto;
   text-align: center;
+  background-color: #e85a4f;
+  color: white;
 }
 
 .default-button:link,
@@ -54,11 +56,6 @@
 .default-button:active {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.default-button-color {
-  background-color: #e85a4f;
-  color: white;
 }
 
 .default-button::after {
@@ -86,6 +83,22 @@
 .default-button-animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; /* Without this button would be visible as it makes the animation go first before the button renders*/
+}
+
+.default-button-mobile {
+  display: block;
+  border: none;
+  border-radius: 18px;
+  padding: 15px 40px;
+  font-size: 16px;
+  font-weight: 400;
+  outline: none;
+  min-width: 250px;
+  max-width: 250px;
+  margin: auto auto 10px auto;
+  text-align: center;
+  background-color: #e85a4f;
+  color: white;
 }
 
 .github-link-item {
